--- a/style.css
+++ b/style.css
@@ -14,4 +14,5 @@ img {
   padding: 20px;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
+  box-shadow: 2px 1px 5px  rgb(104, 104, 104);
 }
